--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,10 +27,13 @@ dependencies = [
         "tensorboard",
         "hydra-core",
         "hydra-submitit-launcher",
+        "hydra-joblib-launcher",
         "hydra-colorlog",
-        "stable-baselines3",
+        "stable-baselines3>=2.0.0",
         "moviepy",
-        "rliable"
+        "rliable",
+        "HyperSweeper",
+        "ray[rllib]",
 ]
 
 [project.optional-dependencies]
